--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,16 @@
   },
   "dependencies": {
     "@kangc/v-md-editor": "^2.3.18",
+    "@mdit/plugin-figure": "^0.14.0",
     "axios": "^1.7.7",
+    "element-plus": "^2.9.1",
     "github-markdown-css": "^5.7.0",
     "highlight.js": "^11.10.0",
     "jinrishici": "^1.0.6",
     "markdown-it": "^14.1.0",
     "markdown-it-highlightjs": "^4.2.0",
+    "mitt": "^3.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
     "vue-markdown": "^2.2.4",
@@ -28,6 +32,7 @@
     "@types/highlight.js": "^9.12.4",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.17.6",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^7.0.1",
